add biography and img src to json file

--- a/index.html
+++ b/index.html
@@ -20,21 +20,15 @@
       >
         <div class="bio">
           <h1><%=user.name%></h1>
-          <p>
-            👋 من یک توسعه دهنده سمت کاربر هستم که در حال حاضر به صورت فریلنسر
-            کار می کنم. پیش از این در استارتاپ پادرو که یک پلتفرم هوشمند ارسال
-            کالا هست مشغول به کار بودم.
-          </p>
-          <p>علاقه مند به بازی های رومیزی، پیاده روی و بازی DOTA2 هستم.</p>
-          <p>
-            من در حال حاضر در حال کار کردن روی یک فروشگاه آنلاین سفارش غذا هستم.
-          </p>
+          <% user.biography.forEach(function(item){ %>
+            <p><%= item %></p>
+          <% }); %>
         </div>
         <div class="image d-none d-sm-block">
-          <img class="shape-top" src="./src/asset/img/square-dark.png" />
+          <img class="shape-top" src="<%= user.img[0]%>" />
           <img
             class="shape-bot position-absolute"
-            src="./src/asset/img/square.png"
+            src="<%= user.img[1]%>"
           />
         </div>
       </div>
