modify json file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="contact d-flex">
         <% user.contact.social.forEach(function(item){ %>
           <a href=<%=item.url%> target="_blank">
-            <i class='<%=item.icon%>'></i>
+            <i class='<%=item.type%>'></i>
           </a>
         <% }); %>
       </div>
